@@ -21,6 +21,7 @@ Changes to Squid-2.4.DEVEL3 ():
 	  the maximum allowed size.
 	- allow-miss cache_peer option disabling the use of "only-if-cached".
 	  Meant to be used in conjunction with icp_hit_stale.
+	- Delay pools tuned to allow large initial pool values
 
 Changes to Squid-2.4.DEVEL2 ():
 
